src/objects/TRAK_Design_History__c.object
<CustomObject>
    <description>Business Description: This object is used to automatically keep a track of all changes to Designs.

Technical Description: Populated by a trigger on Design this is an enhancement to the standard Design history functionality as this does not log changes to rich text fields

Used In: Release Tracker App</description>
    <fields>
        <fullName>Apex_Classes__c</fullName>
        <label>Apex Classes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Apex_Trigger__c</fullName>
        <label>Apex Trigger</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Design_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Model__c</fullName>
        <label>Data Model</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Overview__c</fullName>
        <description>The overview before this person edited the Design
To see what the Design overview was changed to, compare this to the next Design History record.</description>
        <label>Design Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <label>Design</label>
        <referenceTo>TRAK_Design__c</referenceTo>
        <relationshipLabel>Design History</relationshipLabel>
        <relationshipName>Design_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Objects__c</fullName>
        <label>Objects</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Components__c</fullName>
        <label>Other Components</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Design History</label>
    <nameField>
        <displayFormat>DH-{00000}</displayFormat>
        <label>Design History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Design History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>